--- a/Dockerfile.ubuntu.chrome.yml
+++ b/Dockerfile.ubuntu.chrome.yml
@@ -1,7 +1,7 @@
 FROM selenium/standalone-chrome:107.0
 
 ARG JMETER_VERSION="5.5"
-
+USER root
 # 4
 ENV JMETER_HOME /opt/apache-jmeter-${JMETER_VERSION}
 ENV JMETER_BIN  ${JMETER_HOME}/bin
