Update others dockerfile

--- a/others-dockerfile/Dockerfile
+++ b/others-dockerfile/Dockerfile
@@ -21,7 +21,7 @@ RUN \
 ARG MAVEN_VERSION=3.6.2
 ARG USER_HOME_DIR="/root"
 ARG SHA=3fbc92d1961482d6fbd57fbf3dd6d27a4de70778528ee3fb44aa7d27eb32dfdc
-ARG BASE_URL=https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries
+ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
 
 RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
   && apt-get update \
@@ -59,12 +59,15 @@ RUN curl --location --silent --show-error --output ${JMETER_HOME}/lib/ext/jmeter
  && curl --location --silent --show-error --output ${JMETER_HOME}/lib/cmdrunner-${CMDRUNNER_VERSION}.jar http://search.maven.org/remotecontent?filepath=kg/apc/cmdrunner/${CMDRUNNER_VERSION}/cmdrunner-${CMDRUNNER_VERSION}.jar \
  && curl --location --silent --show-error --output ${JMETER_HOME}/lib/json-lib-${JSON_LIB_FULL_VERSION}.jar https://search.maven.org/remotecontent?filepath=net/sf/json-lib/json-lib/${JSON_LIB_VERSION}/json-lib-${JSON_LIB_FULL_VERSION}.jar \
  && java -cp ${JMETER_HOME}/lib/ext/jmeter-plugins-manager-${JMETER_PLUGINS_MANAGER_VERSION}.jar org.jmeterplugins.repository.PluginManagerCMDInstaller \
- &&  JVM_ARGS="-Dhttps.proxyHost=<proxyhost> -Dhttps.proxyPort=80"  PluginsManagerCMD.sh install-all-except
+ && PluginsManagerCMD.sh install jpgc-webdriver
 
 RUN curl --location --silent --show-error --output  ${JMETER_HOME}/lib/guava-19.0.0.jar http://search.maven.org/remotecontent?filepath=com/google/guava/guava/22.0/guava-22.0.jar
 
 COPY launch.sh /
 
 WORKDIR ${JMETER_HOME}
+
+
+RUN ["chmod", "+x", "/launch.sh"]
 
 ENTRYPOINT ["/launch.sh"]
