Using chrome107 base img

--- a/Dockerfile.ubuntu.chrome.yml
+++ b/Dockerfile.ubuntu.chrome.yml
@@ -1,7 +1,7 @@
-# FROM selenium/standalone-chrome:107.0
-FROM selenium/standalone-chrome-debug
-EXPOSE 5900-6000
-EXPOSE 4444-4544
+FROM selenium/standalone-chrome:107.0
+# FROM selenium/standalone-chrome-debug
+# EXPOSE 5900-6000
+# EXPOSE 4444-4544
 
 ARG JMETER_VERSION="5.5"
 
