--- a/jmeter.properties
+++ b/jmeter.properties
@@ -496,7 +496,7 @@ server.rmi.ssl.disable=true
 # The commented out values are the defaults.
 
 # legitimate values: xml, csv, db.  Only xml and csv are currently supported.
-#jmeter.save.saveservice.output_format=csv
+jmeter.save.saveservice.output_format=csv
 
 # The below properties are true when field should be saved; false otherwise
 #
